--- a/code/최종_코드.ipynb
+++ b/code/최종_코드.ipynb
@@ -1288,8 +1288,8 @@
     "features = ['gender', 'age', 'caffeine_mg', 'alcohol_g', 'step_count', 'sleep_duration']\n",
     "target = 'sleep_score'\n",
     "\n",
-    "X = prepocessing_df[features]\n",
-    "y = prepocessing_df[target]\n",
+    "X = preprocessing_df[features]\n",
+    "y = preprocessing_df[target]\n",
     "\n",
     "# 데이터 정규화\n",
     "scaler = StandardScaler()\n",
@@ -1412,12 +1412,12 @@
     "# 증강 전 데이터의 분포 확인하기\n",
     "fig, axes = plt.subplots(1,2,figsize=(12,4))\n",
     "\n",
-    "axes[0].hist(prepocessing_df['caffeine_mg'], bins=40)\n",
+    "axes[0].hist(preprocessing_df['caffeine_mg'], bins=40)\n",
     "axes[0].set_xlabel(\"caffeine_mg\")\n",
     "axes[0].set_ylabel(\"number\")\n",
     "axes[0].set_title(\"caffeine\")\n",
     "\n",
-    "axes[1].hist(prepocessing_df['alcohol_g'], bins=40)\n",
+    "axes[1].hist(preprocessing_df['alcohol_g'], bins=40)\n",
     "axes[1].set_xlabel(\"alcohol_g\")\n",
     "axes[1].set_ylabel(\"number\")\n",
     "axes[1].set_title(\"alcohol\")\n",
@@ -2727,7 +2727,7 @@
     "target = 'sleep_score'\n",
     "\n",
     "# train-test 분리\n",
-    "train_df, test_df = train_test_split(prepocessing_df, test_size=0.2, random_state=42)\n",
+    "train_df, test_df = train_test_split(preprocessing_df, test_size=0.2, random_state=42)\n",
     "\n",
     "# train 데이터만 증강\n",
     "aug_train_df = augment_selected_features(train_df)\n",
